# ucp_nan

./: GOVERNANCE.md  README.md  hooks.py  mkdocs.yml  pyproject.toml  sitemap.xml
.cache/plugin/social/: manifest.json
.cspell/: custom-words.txt
.gemini/: styleguide.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: discussion-moderation.yml  docs.yml  issue-triage.yml  linter.yaml  notify-sdks.yml  pr-triage.yml  release-setup.yml  spellcheck.yaml  stale-agent-auditor.yml
docs/specification/: checkout-mcp.md  checkout-rest.md  checkout.md  overview.md
draft/: 404.html  index.html  llms-full.txt  llms.txt  sitemap.xml
draft/documentation/core-concepts/: index.html
draft/documentation/roadmap/: index.html
draft/documentation/schema-authoring/: index.html
draft/documentation/ucp-and-ap2/: index.html
draft/handlers/tokenization/: openapi.json
draft/playground/: index.html
draft/schemas/shopping/: ap2_mandate.json  buyer_consent.json  cart.json  checkout.json  discount.json  fulfillment.json  order.json
draft/search/: search_index.json
draft/services/shopping/: embedded.openrpc.json  mcp.openrpc.json  rest.openapi.json
draft/specification/ap2-mandates/: index.html
draft/specification/buyer-consent/: index.html
draft/specification/cart/: index.html
draft/specification/cart-mcp/: index.html
draft/specification/cart-rest/: index.html
draft/specification/checkout-a2a/: index.html
draft/specification/checkout-mcp/: index.html
draft/specification/checkout-rest/: index.html
scripts/: ci_check_models.sh
(+19 files in other folders)
