[project]
name = "ucp"
version = "2026.01.23"
description = "Universal Commerce Protocol"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datamodel-code-generator[http]>=0.50.0",
]

[tool.ruff]
line-length = 80
indent-width = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
preview = false

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C4", "SIM", "N", "UP", "D", "PTH", "T20"]
ignore = ["D203", "D213", "T201"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
case-sensitive = true
